--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+
+.container, .container-fluid {
+  margin-top: 20px;
+}  
+
+Button {
+  margin-right: 10px;
+  border-radius: 4px;
+}
